--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/frxnnk/glorpos/refs/heads/main/assets/glorphead.png">
 </head>
 <body>
-
+  <div class="background-wrapper"></div>
   <div class="boot-screen">
     <img src="https://raw.githubusercontent.com/frxnnk/glorpos/refs/heads/main/assets/glorphead.png" alt="GlorpCat OS Logo" class="boot-logo">
     <div id="boot-messages"></div>
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
   
 </body>
 </html>
