secure firebase credentials

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <rect width="48" height="48" rx="8" fill="var(--primary)"/>
         <text x="24" y="32" fill="white" text-anchor="middle" font-size="24">💰</text>
       </svg>
-      <div>GlorpWallet</div>
+      <div>Wallet</div>
     </div>
 
     <div class="desktop-icon" onclick="openChart()">
@@ -36,7 +36,7 @@
         <rect width="48" height="48" rx="8" fill="#ff69b4"/>
         <text x="24" y="32" fill="white" text-anchor="middle" font-size="24">✨</text>
       </svg>
-      <div>Glorp Generator</div>
+      <div>Randglorp</div>
     </div>
 
     <div class="desktop-icon" onclick="openHome()">
@@ -47,20 +47,20 @@
       <div>Web</div>
     </div>
 
-    <div class="desktop-icon" onclick="openChat()">
+    <!-- <div class="desktop-icon" onclick="initChat()">
       <svg class="icon-img" viewBox="0 0 48 48">
         <rect width="48" height="48" rx="8" fill="#ff69b4"/>
         <text x="24" y="32" fill="white" text-anchor="middle" font-size="24">💭</text>
       </svg>
-      <div>GlorpChat</div>
-    </div>
+      <div>Chat</div>
+    </div> -->
 
     <div class="desktop-icon" onclick="openGame()">
       <svg class="icon-img" viewBox="0 0 48 48">
         <rect width="48" height="48" rx="8" fill="#ff69b4"/>
         <text x="24" y="32" fill="white" text-anchor="middle" font-size="24">🎮</text>
       </svg>
-      <div>Glorpy Bird</div>
+      <div>Flappy Glorp</div>
     </div>
 
     <div class="desktop-icon" onclick="openMagicEden()">
@@ -100,7 +100,7 @@
   <div class="start-menu">
     <div class="start-menu-item" onclick="openGlorpWallet()">
       <span>💰</span>
-      <span>GlorpWallet</span>
+      <span>Wallet</span>
     </div>
     <div class="start-menu-item" onclick="openChart()">
       <span>📈</span>
@@ -108,11 +108,11 @@
     </div>
     <div class="start-menu-item" onclick="openGenerator()">
       <span>✨</span>
-      <span>Glorp Generator</span>
+      <span>Randglorp</span>
     </div>
     <div class="start-menu-item" onclick="openGame()">
       <span>🎮</span>
-      <span>GlorpCat Game</span>
+      <span>Flappy Glorp</span>
     </div>
     <div class="start-menu-item" onclick="openMagicEden()">
       <span>🎨</span>
@@ -162,6 +162,12 @@
   </div>
 
   <script type="module" src="script.js"></script>
-  
+  <script type="module" src="/glorpos/programs/chat.js"></script>
+  <script type="module" src="/glorpos/programs/donate.js"></script>
+  <script type="module" src="/glorpos/programs/flapyglorp.js"></script>
+  <script type="module" src="/glorpos/programs/help.js"></script>
+  <script type="module" src="/glorpos/programs/music.js"></script>
+  <script type="module" src="/glorpos/programs/settings.js"></script>
+  <script type="module" src="/glorpos/programs/terminal.js"></script>
 </body>
 </html>
