--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GlorpOS</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/frxnnk/glorpos/refs/heads/main/assets/glorphead.png">
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/frxnnk/refs/heads/main/assets/glorphead.png">
 </head>
 <body>
   <div class="background-wrapper"></div>
   <div class="boot-screen">
-    <img src="https://raw.githubusercontent.com/frxnnk/glorpos/refs/heads/main/assets/glorphead.png" alt="GlorpCat OS Logo" class="boot-logo">
+    <img src="https://raw.githubusercontent.com/frxnnk/refs/heads/main/assets/glorphead.png" alt="GlorpCat OS Logo" class="boot-logo">
     <div id="boot-messages"></div>
     <div class="boot-progress">
       <div class="boot-progress-bar"></div>
@@ -146,7 +146,7 @@
 
   <div class="taskbar">
     <div class="start-button" onclick="toggleStartMenu()">
-      <img src="https://raw.githubusercontent.com/frxnnk/glorpos/refs/heads/main/assets/glorphead.png" alt="GlorpCat logo" width="24" height="24">
+      <img src="https://raw.githubusercontent.com/frxnnk/refs/heads/main/assets/glorphead.png" alt="GlorpCat logo" width="24" height="24">
       <span>Start</span>
     </div>
 
@@ -162,12 +162,12 @@
   </div>
 
   <script type="module" src="script.js"></script>
-  <script type="module" src="/glorpos/programs/chat.js"></script>
-  <script type="module" src="/glorpos/programs/donate.js"></script>
-  <script type="module" src="/glorpos/programs/flapyglorp.js"></script>
-  <script type="module" src="/glorpos/programs/help.js"></script>
-  <script type="module" src="/glorpos/programs/music.js"></script>
-  <script type="module" src="/glorpos/programs/settings.js"></script>
-  <script type="module" src="/glorpos/programs/terminal.js"></script>
+  <script type="module" src="programs/chat.js"></script>
+  <script type="module" src="programs/donate.js"></script>
+  <script type="module" src="programs/flapyglorp.js"></script>
+  <script type="module" src="programs/help.js"></script>
+  <script type="module" src="programs/music.js"></script>
+  <script type="module" src="programs/settings.js"></script>
+  <script type="module" src="programs/terminal.js"></script>
 </body>
 </html>
