--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <rect width="48" height="48" rx="8" fill="#ff69b4"/>
         <text x="24" y="32" fill="white" text-anchor="middle" font-size="24">🌐</text>
       </svg>
-      <div>Web</div>
+      <div>Links</div>
     </div>
 
     <!-- <div class="desktop-icon" onclick="initChat()">
