--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <rect width="48" height="48" rx="8" fill="#ff69b4"/>
         <text x="24" y="32" fill="white" text-anchor="middle" font-size="24">✨</text>
       </svg>
-      <div>Randglorp</div>
+      <div>Glorp Maker</div>
     </div>
 
     <div class="desktop-icon" onclick="openHome()">
